# rust-actix-mysql2

./: .env  Cargo.toml
src/: db_layer.rs  main.rs  ws.rs
src/config/: db.rs
src/controller/: product_controller.rs
src/middleware/: auth_middleware.rs
src/model/: product.rs
src/routes/: product.rs
