[package]
name = "rust-actix-mysql2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
chrono = "0.4"
actix-web = { version = "^4" }
actix-service = "1.0.6"
actix-cors = "0.6.3"
actix-rt = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.9.0"
derive_more = "0.99.17"
jsonwebtoken = "8.1.1"
bcrypt = "0.13.0"
futures = "0.3.24"
failure = "0.1.8"
dotenv = "0.15.0"
uuid = "1.1.2"
