[package]
name = "rust-actix-mysql2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
chrono = "0.4"
actix-web = "^4"
actix-rt = "*"
actix-service = "1.0.6"
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.2.0"
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
